@@ -56,32 +56,26 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jdk.internal.module.DefaultRoots;
-import jdk.internal.module.ModuleBootstrap;
-import jdk.internal.module.ModuleReferenceImpl;
-import jdk.internal.module.SystemModuleFinders;
 import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
-import org.graalvm.nativeimage.hosted.Feature.BeforeAnalysisAccess;
-import org.graalvm.nativeimage.hosted.FieldValueTransformer;
 
 import com.oracle.graal.pointsto.meta.AnalysisType;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
 import com.oracle.svm.core.feature.InternalFeature;
-import com.oracle.svm.core.heap.UnknownObjectField;
 import com.oracle.svm.core.jdk.Resources;
 import com.oracle.svm.core.jdk.RuntimeModuleSupport;
 import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.hosted.FeatureImpl.AfterAnalysisAccessImpl;
-import com.oracle.svm.hosted.FeatureImpl.AnalysisAccessBase;
-import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
 import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ModuleSupport;
 import com.oracle.svm.util.ReflectionUtil;
+
+import jdk.internal.module.DefaultRoots;
+import jdk.internal.module.ModuleBootstrap;
+import jdk.internal.module.SystemModuleFinders;
 
 /**
  * This feature:
@@ -122,7 +116,6 @@ import com.oracle.svm.util.ReflectionUtil;
  * </p>
  */
 @AutomaticallyRegisteredFeature
-@SuppressWarnings("unused")
 public final class ModuleLayerFeature implements InternalFeature {
     private ModuleLayerFeatureUtils moduleLayerFeatureUtils;
 
@@ -140,7 +133,7 @@ public final class ModuleLayerFeature implements InternalFeature {
                         .map(Module::getName)
                         .collect(Collectors.toSet());
         Function<String, ClassLoader> clf = moduleLayerFeatureUtils::getClassLoaderForBootLayerModule;
-        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl, accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
+        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
         RuntimeModuleSupport.instance().setBootLayer(runtimeBootLayer);
         RuntimeModuleSupport.instance().setHostedToRuntimeModuleMapper(moduleLayerFeatureUtils::getOrCreateRuntimeModuleForHostedModule);
 
@@ -176,33 +169,8 @@ public final class ModuleLayerFeature implements InternalFeature {
     }
 
     @Override
-    public void beforeAnalysis(BeforeAnalysisAccess access) {
-        scanRuntimeBootLayerPrototype((BeforeAnalysisAccessImpl) access);
-
-        access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleReferenceLocationField, ModuleLayerFeatureUtils.ResetModuleReferenceLocation.INSTANCE);
-        access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleReferenceImplLocationField, ModuleLayerFeatureUtils.ResetModuleReferenceLocation.INSTANCE);
-    }
-
-    /**
-     * Generate a temporary module layer to serve as a prototype object for
-     * {@link RuntimeModuleSupport}.bootLayer. The value doesn't need to actually be set in the
-     * field, just scanned such that the analysis sees the deep type hierarchy. The field value
-     * wouldn't be processed during analysis anyway since the field is annotated with
-     * {@link UnknownObjectField}, only the field declared type is injected in the type flow graphs.
-     * The concrete value is set in {@link ModuleLayerFeature#afterAnalysis}. Later when the field
-     * is read the lazy value supplier scans the concrete value and patches the shadow heap.
-     */
-    private void scanRuntimeBootLayerPrototype(BeforeAnalysisAccessImpl accessImpl) {
-        Set<String> baseModules = ModuleLayer.boot().modules().stream().map(Module::getName).collect(Collectors.toSet());
-        Function<String, ClassLoader> clf = moduleLayerFeatureUtils::getClassLoaderForBootLayerModule;
-        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl, accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
-        /* Only scan the value if module support is enabled and bootLayer field is reachable. */
-        accessImpl.registerReachabilityHandler((a) -> accessImpl.rescanObject(runtimeBootLayer), ReflectionUtil.lookupField(RuntimeModuleSupport.class, "bootLayer"));
-    }
-
-    @Override
     public void afterAnalysis(AfterAnalysisAccess access) {
-        AfterAnalysisAccessImpl accessImpl = (AfterAnalysisAccessImpl) access;
+        FeatureImpl.AfterAnalysisAccessImpl accessImpl = (FeatureImpl.AfterAnalysisAccessImpl) access;
 
         Set<Module> runtimeImageNamedModules = accessImpl.getUniverse().getTypes()
                         .stream()
@@ -260,8 +228,8 @@ public final class ModuleLayerFeature implements InternalFeature {
          * Ensure that runtime modules have the same relations (i.e., reads, opens and exports) as
          * the originals.
          */
-        replicateVisibilityModifications(runtimeBootLayer, accessImpl, accessImpl.imageClassLoader, runtimeImageNamedModules);
-        replicateNativeAccess(accessImpl, runtimeImageNamedModules);
+        replicateVisibilityModifications(runtimeBootLayer, accessImpl.imageClassLoader, runtimeImageNamedModules);
+        replicateNativeAccess(runtimeImageNamedModules);
     }
 
     /**
@@ -379,7 +347,7 @@ public final class ModuleLayerFeature implements InternalFeature {
         return Stream.concat(Stream.of(m.getName()), requiredModules);
     }
 
-    private List<ModuleLayer> synthesizeRuntimeModuleLayers(AfterAnalysisAccessImpl accessImpl, List<ModuleLayer> hostedModuleLayers, Collection<Module> reachableNamedModules,
+    private List<ModuleLayer> synthesizeRuntimeModuleLayers(FeatureImpl.AfterAnalysisAccessImpl accessImpl, List<ModuleLayer> hostedModuleLayers, Collection<Module> reachableNamedModules,
                     Collection<Module> reachableSyntheticModules, Collection<String> rootModuleNames) {
         /*
          * A mapping from hosted to runtime module layers. Used when looking up runtime module layer
@@ -423,7 +391,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             Configuration cf = isBootModuleLayer ? null : hostedModuleLayer.configuration();
             Function<String, ClassLoader> clf = name -> moduleLayerFeatureUtils.getClassLoaderForModuleInModuleLayer(hostedModuleLayer, name);
 
-            ModuleLayer runtimeModuleLayer = synthesizeRuntimeModuleLayer(parents, accessImpl, accessImpl.imageClassLoader, moduleNames, syntheticModules, clf, cf);
+            ModuleLayer runtimeModuleLayer = synthesizeRuntimeModuleLayer(parents, accessImpl.imageClassLoader, moduleNames, syntheticModules, clf, cf);
             moduleLayerPairs.put(hostedModuleLayer, runtimeModuleLayer);
         }
 
@@ -431,8 +399,8 @@ public final class ModuleLayerFeature implements InternalFeature {
         return new ArrayList<>(moduleLayerPairs.values());
     }
 
-    private ModuleLayer synthesizeRuntimeModuleLayer(List<ModuleLayer> parentLayers, AnalysisAccessBase accessImpl, ImageClassLoader cl, Set<String> reachableModules,
-                    Set<Module> syntheticModules, Function<String, ClassLoader> clf, Configuration cfOverride) {
+    private ModuleLayer synthesizeRuntimeModuleLayer(List<ModuleLayer> parentLayers, ImageClassLoader cl, Set<String> reachableModules, Set<Module> syntheticModules,
+                    Function<String, ClassLoader> clf, Configuration cfOverride) {
         /**
          * For consistent module lookup we reuse the {@link ModuleFinder}s defined and used in
          * {@link NativeImageClassLoaderSupport}.
@@ -450,21 +418,20 @@ public final class ModuleLayerFeature implements InternalFeature {
         ModuleLayer runtimeModuleLayer = null;
         try {
             runtimeModuleLayer = moduleLayerFeatureUtils.createNewModuleLayerInstance(runtimeModuleLayerConfiguration);
-            Map<String, Module> nameToModule = moduleLayerFeatureUtils.synthesizeNameToModule(accessImpl, runtimeModuleLayer, clf);
+            Map<String, Module> nameToModule = moduleLayerFeatureUtils.synthesizeNameToModule(runtimeModuleLayer, clf);
             for (Module syntheticModule : syntheticModules) {
                 Module runtimeSyntheticModule = moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(syntheticModule);
                 nameToModule.putIfAbsent(runtimeSyntheticModule.getName(), runtimeSyntheticModule);
-                moduleLayerFeatureUtils.patchModuleLayerField(accessImpl, runtimeSyntheticModule, runtimeModuleLayer);
+                moduleLayerFeatureUtils.patchModuleLayerField(runtimeSyntheticModule, runtimeModuleLayer);
             }
-            patchRuntimeModuleLayer(accessImpl, runtimeModuleLayer, nameToModule, parentLayers);
-            accessImpl.rescanField(runtimeModuleLayer, moduleLayerFeatureUtils.moduleLayerModulesField);
+            patchRuntimeModuleLayer(runtimeModuleLayer, nameToModule, parentLayers);
             return runtimeModuleLayer;
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException ex) {
             throw VMError.shouldNotReachHere("Failed to synthesize the runtime module layer: " + runtimeModuleLayer, ex);
         }
     }
 
-    private void replicateVisibilityModifications(ModuleLayer runtimeBootLayer, AfterAnalysisAccessImpl accessImpl, ImageClassLoader cl, Set<Module> analysisReachableNamedModules) {
+    private void replicateVisibilityModifications(ModuleLayer runtimeBootLayer, ImageClassLoader cl, Set<Module> analysisReachableNamedModules) {
         List<Module> applicationModules = findApplicationModules(runtimeBootLayer, cl.applicationModulePath());
 
         Map<Module, Module> modulePairs = analysisReachableNamedModules
@@ -490,27 +457,27 @@ public final class ModuleLayerFeature implements InternalFeature {
                     }
                     Module runtimeTo = e2.getValue();
                     if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.canRead(hostedTo)) {
-                        moduleLayerFeatureUtils.addReads(accessImpl, runtimeFrom, runtimeTo);
+                        moduleLayerFeatureUtils.addReads(runtimeFrom, runtimeTo);
                         if (hostedFrom == builderModule) {
                             for (Module appModule : applicationModules) {
-                                moduleLayerFeatureUtils.addReads(accessImpl, appModule, runtimeTo);
+                                moduleLayerFeatureUtils.addReads(appModule, runtimeTo);
                             }
                         }
                     }
                     for (String pn : runtimeFrom.getPackages()) {
                         if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isOpen(pn, hostedTo)) {
-                            moduleLayerFeatureUtils.addOpens(accessImpl, runtimeFrom, pn, runtimeTo);
+                            moduleLayerFeatureUtils.addOpens(runtimeFrom, pn, runtimeTo);
                             if (hostedTo == builderModule) {
                                 for (Module appModule : applicationModules) {
-                                    moduleLayerFeatureUtils.addOpens(accessImpl, runtimeFrom, pn, appModule);
+                                    moduleLayerFeatureUtils.addOpens(runtimeFrom, pn, appModule);
                                 }
                             }
                         }
                         if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isExported(pn, hostedTo)) {
-                            moduleLayerFeatureUtils.addExports(accessImpl, runtimeFrom, pn, runtimeTo);
+                            moduleLayerFeatureUtils.addExports(runtimeFrom, pn, runtimeTo);
                             if (hostedTo == builderModule) {
                                 for (Module appModule : applicationModules) {
-                                    moduleLayerFeatureUtils.addExports(accessImpl, runtimeFrom, pn, appModule);
+                                    moduleLayerFeatureUtils.addExports(runtimeFrom, pn, appModule);
                                 }
                             }
                         }
@@ -522,7 +489,7 @@ public final class ModuleLayerFeature implements InternalFeature {
         }
     }
 
-    private void replicateNativeAccess(AfterAnalysisAccessImpl accessImpl, Set<Module> analysisReachableNamedModules) {
+    private void replicateNativeAccess(Set<Module> analysisReachableNamedModules) {
         if (JavaVersionUtil.JAVA_SPEC < 19) {
             return;
         }
@@ -538,7 +505,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             Module hosted = modulesPair.getKey();
             Module runtime = modulesPair.getValue();
             if (moduleLayerFeatureUtils.allowsNativeAccess(hosted)) {
-                moduleLayerFeatureUtils.setNativeAccess(accessImpl, runtime, true);
+                moduleLayerFeatureUtils.setNativeAccess(runtime, true);
             }
         }
 
@@ -552,7 +519,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             applicationModuleNames = applicationModuleFinder.findAll()
                             .stream()
                             .map(m -> m.descriptor().name())
-                            .toList();
+                            .collect(Collectors.toList());
         } catch (FindException | ResolutionException | SecurityException ex) {
             throw VMError.shouldNotReachHere("Failed to locate application modules.", ex);
         }
@@ -587,10 +554,10 @@ public final class ModuleLayerFeature implements InternalFeature {
         }
     }
 
-    private void patchRuntimeModuleLayer(AnalysisAccessBase accessImpl, ModuleLayer runtimeModuleLayer, Map<String, Module> nameToModule, List<ModuleLayer> parents) {
+    private void patchRuntimeModuleLayer(ModuleLayer runtimeModuleLayer, Map<String, Module> nameToModule, List<ModuleLayer> parents) {
         try {
-            moduleLayerFeatureUtils.patchModuleLayerNameToModuleField(accessImpl, runtimeModuleLayer, nameToModule);
-            moduleLayerFeatureUtils.patchModuleLayerParentsField(accessImpl, runtimeModuleLayer, parents);
+            moduleLayerFeatureUtils.patchModuleLayerNameToModuleField(runtimeModuleLayer, nameToModule);
+            moduleLayerFeatureUtils.patchModuleLayerParentsField(runtimeModuleLayer, parents);
         } catch (IllegalAccessException ex) {
             throw VMError.shouldNotReachHere("Failed to patch the runtime boot module layer.", ex);
         }
@@ -625,9 +592,6 @@ public final class ModuleLayerFeature implements InternalFeature {
         private final Constructor<ModuleLayer> moduleLayerConstructor;
         private final Field moduleLayerNameToModuleField;
         private final Field moduleLayerParentsField;
-        private final Field moduleLayerModulesField;
-        private final Field moduleReferenceLocationField;
-        private final Field moduleReferenceImplLocationField;
 
         ModuleLayerFeatureUtils(ImageClassLoader cl) {
             runtimeModules = new HashMap<>();
@@ -683,9 +647,6 @@ public final class ModuleLayerFeature implements InternalFeature {
                 moduleLayerConstructor = ReflectionUtil.lookupConstructor(ModuleLayer.class, Configuration.class, List.class, Function.class);
                 moduleLayerNameToModuleField = ReflectionUtil.lookupField(ModuleLayer.class, "nameToModule");
                 moduleLayerParentsField = ReflectionUtil.lookupField(ModuleLayer.class, "parents");
-                moduleLayerModulesField = ReflectionUtil.lookupField(ModuleLayer.class, "modules");
-                moduleReferenceLocationField = ReflectionUtil.lookupField(ModuleReference.class, "location");
-                moduleReferenceImplLocationField = ReflectionUtil.lookupField(ModuleReferenceImpl.class, "location");
             } catch (ReflectiveOperationException | NoSuchElementException ex) {
                 throw VMError.shouldNotReachHere("Failed to retrieve fields of the Module/ModuleLayer class.", ex);
             }
@@ -847,7 +808,7 @@ public final class ModuleLayerFeature implements InternalFeature {
          * and removal of VM state updates (otherwise we would be re-defining modules to the host
          * VM).
          */
-        Map<String, Module> synthesizeNameToModule(AnalysisAccessBase access, ModuleLayer runtimeModuleLayer, Function<String, ClassLoader> clf)
+        Map<String, Module> synthesizeNameToModule(ModuleLayer runtimeModuleLayer, Function<String, ClassLoader> clf)
                         throws IllegalAccessException, InvocationTargetException {
             Configuration cf = runtimeModuleLayer.configuration();
 
@@ -866,9 +827,8 @@ public final class ModuleLayerFeature implements InternalFeature {
                 Module m = getOrCreateRuntimeModuleForHostedModule(loader, name, descriptor);
                 if (!descriptor.equals(m.getDescriptor())) {
                     moduleDescriptorField.set(m, descriptor);
-                    access.rescanField(m, moduleDescriptorField);
                 }
-                patchModuleLayerField(access, m, runtimeModuleLayer);
+                patchModuleLayerField(m, runtimeModuleLayer);
                 nameToModule.put(name, m);
             }
 
@@ -895,7 +855,6 @@ public final class ModuleLayerFeature implements InternalFeature {
                     reads.add(allUnnamedModule);
                 }
                 moduleReadsField.set(m, reads);
-                access.rescanField(m, moduleReadsField);
 
                 if (!descriptor.isOpen() && !descriptor.isAutomatic()) {
                     if (descriptor.opens().isEmpty()) {
@@ -918,7 +877,6 @@ public final class ModuleLayerFeature implements InternalFeature {
                             }
                         }
                         moduleExportedPackagesField.set(m, exportedPackages);
-                        access.rescanField(m, moduleExportedPackagesField);
                     } else {
                         Map<String, Set<Module>> openPackages = new HashMap<>(descriptor.opens().size());
                         for (ModuleDescriptor.Opens opens : descriptor.opens()) {
@@ -966,30 +924,26 @@ public final class ModuleLayerFeature implements InternalFeature {
                         }
 
                         moduleOpenPackagesField.set(m, openPackages);
-                        access.rescanField(m, moduleOpenPackagesField);
                         moduleExportedPackagesField.set(m, exportedPackages);
-                        access.rescanField(m, moduleExportedPackagesField);
                     }
                 }
-                access.rescanObject(m);
             }
 
             return nameToModule;
         }
 
         @SuppressWarnings("unchecked")
-        void addReads(AfterAnalysisAccessImpl accessImpl, Module module, Module other) throws IllegalAccessException {
+        void addReads(Module module, Module other) throws IllegalAccessException {
             Set<Module> reads = (Set<Module>) moduleReadsField.get(module);
             if (reads == null) {
                 reads = new HashSet<>(1);
                 moduleReadsField.set(module, reads);
             }
             reads.add(other == null ? allUnnamedModule : other);
-            accessImpl.rescanField(module, moduleReadsField);
         }
 
         @SuppressWarnings("unchecked")
-        void addExports(AfterAnalysisAccessImpl accessImpl, Module module, String pn, Module other) throws IllegalAccessException {
+        void addExports(Module module, String pn, Module other) throws IllegalAccessException {
             if (other != null && module.isExported(pn, other)) {
                 return;
             }
@@ -1012,11 +966,10 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (prev != null) {
                 prev.add(other == null ? allUnnamedModule : other);
             }
-            accessImpl.rescanField(module, moduleExportedPackagesField);
         }
 
         @SuppressWarnings("unchecked")
-        void addOpens(AfterAnalysisAccessImpl accessImpl, Module module, String pn, Module other) throws IllegalAccessException {
+        void addOpens(Module module, String pn, Module other) throws IllegalAccessException {
             if (other != null && module.isOpen(pn, other)) {
                 return;
             }
@@ -1039,12 +992,10 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (prev != null) {
                 prev.add(other == null ? allUnnamedModule : other);
             }
-            accessImpl.rescanField(module, moduleOpenPackagesField);
         }
 
-        void patchModuleLayerField(AnalysisAccessBase accessImpl, Module module, ModuleLayer runtimeBootLayer) throws IllegalAccessException {
+        void patchModuleLayerField(Module module, ModuleLayer runtimeBootLayer) throws IllegalAccessException {
             moduleLayerField.set(module, runtimeBootLayer);
-            accessImpl.rescanField(module, moduleLayerField);
         }
 
         void patchModuleLoaderField(Module module, ClassLoader loader) throws IllegalAccessException {
@@ -1055,14 +1006,12 @@ public final class ModuleLayerFeature implements InternalFeature {
             return moduleLayerConstructor.newInstance(cf, List.of(), null);
         }
 
-        void patchModuleLayerNameToModuleField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, Map<String, Module> nameToModule) throws IllegalAccessException {
+        void patchModuleLayerNameToModuleField(ModuleLayer moduleLayer, Map<String, Module> nameToModule) throws IllegalAccessException {
             moduleLayerNameToModuleField.set(moduleLayer, nameToModule);
-            accessImpl.rescanField(moduleLayer, moduleLayerNameToModuleField);
         }
 
-        void patchModuleLayerParentsField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, List<ModuleLayer> parents) throws IllegalAccessException {
+        void patchModuleLayerParentsField(ModuleLayer moduleLayer, List<ModuleLayer> parents) throws IllegalAccessException {
             moduleLayerParentsField.set(moduleLayer, parents);
-            accessImpl.rescanField(moduleLayer, moduleLayerParentsField);
         }
 
         ClassLoader getClassLoaderForBootLayerModule(String name) {
@@ -1131,37 +1080,12 @@ public final class ModuleLayerFeature implements InternalFeature {
 
         }
 
-        void setNativeAccess(AfterAnalysisAccessImpl accessImpl, Module module, boolean value) {
+        void setNativeAccess(Module module, boolean value) {
             assert moduleEnableNativeAccessField != null : "Only available on JDK19+";
             try {
                 moduleEnableNativeAccessField.set(module, value);
-                accessImpl.rescanField(module, moduleEnableNativeAccessField);
             } catch (IllegalAccessException e) {
                 throw VMError.shouldNotReachHere("Failed to reflectively set Module.enableNativeAccess.", e);
-            }
-        }
-
-        /**
-         * Patch module references that contain URLs with a non-JRT protocol. Module references can
-         * contain URLs that capture hosted directories, e.g.,
-         * {@linkplain "file:///home/user/dir/foo.jar"}. See
-         * {@link com.oracle.svm.hosted.image.DisallowedImageHeapObjectFeature} for more details on
-         * what substrings are detected during the image build.
-         */
-        static final class ResetModuleReferenceLocation implements FieldValueTransformer {
-
-            static final FieldValueTransformer INSTANCE = new ResetModuleReferenceLocation();
-
-            private ResetModuleReferenceLocation() {
-            }
-
-            @Override
-            public Object transform(Object receiver, Object originalValue) {
-                if (originalValue == null || originalValue.toString().startsWith("jrt://")) {
-                    return originalValue;
-                } else {
-                    return null;
-                }
             }
         }
     }
